// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correctly returns getAddonHealth 1`] = `
Array [
  Object {
    "key": "Degraded",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Degraded",
    "value": 1,
  },
  Object {
    "key": "Progressing",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Progressing",
    "value": 1,
  },
  Object {
    "key": "Unknown",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Unknown",
    "value": 3,
  },
  Object {
    "isPrimary": true,
    "key": "Available",
    "link": "/multicloud/infrastructure/clusters/managed?addons=Available",
    "value": 3,
  },
]
`;

exports[`Correctly returns getAppTypeSummary 1`] = `
Object {
  "mainSection": Object {
    "description": "total applications",
    "link": "/multicloud/applications",
    "title": "7",
  },
  "statusSection": Array [
    Object {
      "count": 1,
      "link": "/multicloud/applications?type=subscription",
      "title": "Subscription",
    },
    Object {
      "count": 2,
      "link": "/multicloud/applications?type=appset",
      "title": "Application set",
    },
    Object {
      "count": 2,
      "link": "/multicloud/applications",
      "title": "Argo CD",
    },
    Object {
      "count": 1,
      "link": "/multicloud/applications",
      "title": "OpenShift",
    },
    Object {
      "count": 1,
      "link": "/multicloud/applications?type=flux",
      "title": "Flux",
    },
  ],
}
`;

exports[`Correctly returns getClusterProviderSummary 1`] = `
Array [
  Object {
    "key": "Amazon",
    "link": "/multicloud/infrastructure/clusters/managed?provider=aws",
    "value": 2,
  },
]
`;

exports[`Correctly returns getClusterStatus 1`] = `
Array [
  Object {
    "key": "Offline",
    "link": "/multicloud/search?filters={\\"textsearch\\":\\"kind%3ACluster%20ManagedClusterConditionAvailable%3A!True%20label%3Acloud%3DAmazon\\"}",
    "value": 1,
  },
  Object {
    "isPrimary": true,
    "key": "Ready",
    "link": "/multicloud/search?filters={\\"textsearch\\":\\"kind%3ACluster%20ManagedClusterConditionAvailable%3ATrue%20label%3Acloud%3DAmazon\\"}",
    "value": 1,
  },
]
`;

exports[`Correctly returns getClusterVersionSummary 1`] = `
Array [
  Object {
    "key": "unknown",
    "value": 1,
  },
  Object {
    "key": "OpenShift 4.15",
    "value": 1,
  },
]
`;

exports[`Correctly returns getComplianceData 1`] = `
Array [
  Object {
    "key": "Violations",
    "link": "/multicloud/governance/policies?violations=violations",
    "value": 1,
  },
  Object {
    "isPrimary": true,
    "key": "No violations",
    "link": "/multicloud/governance/policies?violations=no-violations&violations=no-status",
    "value": 1,
  },
]
`;

exports[`Correctly returns getFilteredClusters 1`] = `
Array [
  Object {
    "clusterSet": "default",
    "displayName": "managed-1",
    "hasAutomationTemplate": false,
    "hive": Object {
      "isHibernatable": false,
      "secrets": Object {},
    },
    "isCurator": false,
    "isHive": false,
    "isHostedCluster": false,
    "isHypershift": false,
    "isManaged": true,
    "isRegionalHubCluster": false,
    "isSNOCluster": false,
    "labels": Object {
      "cloud": "Amazon",
      "cluster.open-cluster-management.io/clusterset": "default",
      "env": "dev",
      "name": "managed-1",
      "openshiftVersion": "4.13.4",
      "openshiftVersion-major": "4",
      "openshiftVersion-major-minor": "4.13",
      "vendor": "OpenShift",
    },
    "name": "managed-1",
    "namespace": "managed-1",
    "nodes": Object {
      "nodeList": Array [],
      "ready": 0,
      "unhealthy": 0,
      "unknown": 0,
    },
    "owner": Object {},
    "provider": "aws",
    "status": "unknown",
    "statusMessage": "Registration agent stopped updating its lease.",
    "uid": "d75e89bc-29d7-45ca-b057-bb84dc095200",
  },
]
`;

exports[`Correctly returns getNodeSummary 1`] = `
Object {
  "mainSection": Object {
    "description": "total nodes",
    "title": "1",
  },
  "statusSection": Array [
    Object {
      "count": 1,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/infrastructure/clusters/managed?nodes=healthy",
      "title": "Ready",
    },
    Object {
      "count": 0,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": undefined,
      "title": "Unhealthy",
    },
    Object {
      "count": 0,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": undefined,
      "title": "Unknown",
    },
  ],
}
`;

exports[`Correctly returns getPolicyReport 1`] = `
Object {
  "clustersWithIssuesCount": 1,
  "policyReportCriticalCount": 1,
  "policyReportImportantCount": 1,
  "policyReportLowCount": 1,
  "policyReportModerateCount": 1,
}
`;

exports[`Correctly returns getPolicySummary 1`] = `
Object {
  "mainSection": Object {
    "description": "enabled policies",
    "link": "/multicloud/governance/policies?enabled=True",
    "title": "2",
  },
  "statusSection": Array [
    Object {
      "count": 0,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-violations",
      "title": "With no violations",
    },
    Object {
      "count": 1,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=violations",
      "title": "With violations",
    },
    Object {
      "count": 1,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-status",
      "title": "No status",
    },
  ],
}
`;

exports[`Correctly returns getPolicySummary with filtered clusters 1`] = `
Object {
  "mainSection": Object {
    "description": "enabled policies",
    "link": "/multicloud/governance/policies?enabled=True",
    "title": "1",
  },
  "statusSection": Array [
    Object {
      "count": 0,
      "icon": <CheckCircleIcon
        color="var(--pf-global--success-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-violations",
      "title": "With no violations",
    },
    Object {
      "count": 1,
      "icon": <ExclamationCircleIcon
        color="var(--pf-global--danger-color--100)"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=violations",
      "title": "With violations",
    },
    Object {
      "count": 0,
      "icon": <UnknownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "link": "/multicloud/governance/policies?enabled=True&violations=no-status",
      "title": "No status",
    },
  ],
}
`;

exports[`Correctly returns getWorkerCoreTotal 1`] = `8`;

exports[`Correctly returns parseAlertsMetric 1`] = `
Object {
  "alertSeverity": Object {
    "critical": Object {
      "alerts": Array [],
      "icon": <CriticalRiskIcon />,
      "key": "critical",
      "label": "Critical",
    },
    "info": Object {
      "alerts": Array [
        "InsightsRecommendationActive",
        "InsightsRecommendationActive",
      ],
      "icon": undefined,
      "key": "info",
      "label": "Info",
    },
    "other": Object {
      "alerts": Array [],
      "icon": undefined,
      "key": "other",
      "label": "Other",
    },
    "warning": Object {
      "alerts": Array [
        "AlertmanagerReceiversNotConfigured",
      ],
      "icon": <ImportantRiskIcon />,
      "key": "warning",
      "label": "Warning",
    },
  },
  "clustersAffectedAlerts": Array [
    "local-cluster",
    "managed-1",
  ],
}
`;

exports[`Correctly returns parseOperatorMetric 1`] = `
Object {
  "clustersAffectedOperator": Array [],
  "degraded": Array [
    "etcd",
  ],
  "notAvailable": Array [
    "baremetal",
  ],
  "other": Array [
    "cloud-controller-manager",
    "cloud-credential",
    "cloud-credential",
  ],
}
`;

exports[`Correctly returns parseUpgradeRiskPredictions with no predictions 1`] = `
Object {
  "clustersWithRiskPredictors": 0,
  "criticalUpdateCount": 0,
  "infoUpdateCount": 0,
  "warningUpdateCount": 0,
}
`;

exports[`Correctly returns parseUpgradeRiskPredictions with predictions 1`] = `
Object {
  "clustersWithRiskPredictors": 2,
  "criticalUpdateCount": 1,
  "infoUpdateCount": 1,
  "warningUpdateCount": 1,
}
`;
